# exam_manager_challenge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
apps/provas/: api.py  apps.py  documents.py  models.py  schemas.py  tasks.py  tests.py
apps/provas/migrations/: 0001_initial.py
exam_manager/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
scripts/: check_dependencies.py  setup_dev.ps1  setup_dev.sh
