[project]
name = "exam-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "canutoilberto",email = "canutoilberto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.0,<5.1)",
    "django-ninja (>=1.4.0,<2.0.0)",
    "celery (>=5.5.0,<6.0.0)",
    "django-celery-beat (>=2.5.0,<3.0.0)",
    "django-elasticsearch-dsl (>=8.0,<9.0)",
    "redis (>=5.2.1,<6.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"

